style.css
@font-face {
    font-family: arcade;
    src: url(fonts/PressStart2P.ttf);
}

* {
    font-family: arcade, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    background-color: black;
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-size: 16px;    
    color: white;
}

body {
    position: relative;
}

.form {
    display: grid;
    grid-template-rows: 1fr 500px 1fr;
    position: absolute;
    width: 100%;
    align-items: center;
}

.game-mode-container {
    display: grid;
    grid-template-columns: 800px;
    grid-template-rows: 100px 100px;
    margin: 0 auto;
    align-items: center;
    text-align: center;
    padding: 1em;
}

.game-mode-container > div {
    display: flex;
    justify-content: space-evenly;
}

.game-mode-container > div > div > button {
    border: 1px solid limegreen;
    width: 220px;
    border-radius: 10px;
    padding: 1em;
}

.player-name-container > div {
    gap: 1em;
    display: flex;
    display: none;
    justify-content: center;
    align-items: center;
}

.start-button-container {
    display: none;
    margin: 0 auto;
    justify-content: center;
    align-items: center;
}

#p1-name, #p2-name {
    border-radius: 10px;
    padding: 1em;
    height: 40px;
    width: 200px;
    background-color: black;
    color: white;
}

#p1-name {
    outline: 2px inset rgb(255, 103, 231);
}

#p2-name {
    outline: 2px inset rgb(12, 236, 221);
}

.main-container {
    display: grid;
    grid-template-rows: 100px 850px 100px;
}

.score-container {
    display: grid;
    grid-template-columns: 1fr 1fr;
    text-align: center;
    align-items: center;
}

.score-container > div {
    height: 70px;

}
.p1Score-header {
    background-color: rgb(255, 103, 231);
    padding: 1em;
    outline: 1px inset white;
    color: black;
}

.p2Score-header {
    background-color: rgb(12, 236, 221);
    padding: 1em;
    outline: 1px inset white;
    color: black;
}

.game-grid-container {
    display: grid; 
    grid-template-rows: 2fr 6fr 1fr;
    justify-content: center;
    text-align: center;
    align-items: center;
    padding: 0.5em;
}

#caption {
    padding: 0.5em;
}

.new-round {
    padding: 0.6em;
}

.start-button, .new-round > button {
    background-color:greenyellow;
    color: black;
    outline: 1px inset white;
    border-radius: 10px;
    width: 200px;
    height: 60px;
}

button:hover {
    transform: scale(1.05);
    cursor: pointer;
}

.footer {
    display: flex;
    justify-content: center;
    align-items: flex-end;
    font-size: 12px;
}

.game-container {
    display: grid;
    padding: 0.5em;
    grid-template-columns: repeat(3, 160px);
    grid-template-rows: repeat(3, 160px);
    justify-content: center;
    text-align: center;
}

.game-grid {
    display:grid;
    border-bottom: 3px solid goldenrod;
    border-left: 3px solid goldenrod;
    align-items: center;
    justify-content: center;
}

.game-container > :nth-child(1), .game-container > :nth-child(4), .game-container > :nth-child(7)  {
    border-left: none;
}

.game-container > :nth-child(n+7) {
    border-bottom: none;
}

